front_dep.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: modresort-dep
spec:
  selector:
    matchLabels:
      app: modresortchannel
      release: modresortchannel
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: modresortchannel
        release: modresortchannel
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: "kpostreich/modresort:1.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
